--- a/index.html
+++ b/index.html
@@ -9,8 +9,23 @@
 <body>
   <div class ="container">
     <h1>Welcome to the Number Guessing Game</h1>
+     <p>
+        <label for="new-player">Add Player Name</label><input class="form-control focusedInput" id="new-player" type ="text"><button type="button" class="btn btn-primary">Add</button>
+      </p>
+      <p>
+        <label for="upper">Select Range</label><input class="form-control focusedInput" id="upper" type ="text"><button type="button" class="btn btn-primary">Upper</button>
+      </p>
     <button type="button" class="btn btn-lg btn-success btn-block">Start</button>  
+    <h3>GamePlay</h3>
+      <ul id = "gameplay">
+        <li>Too High!</li>
+      </ul>
+    <h3>Scores</h3>
+      <ol id="Scores">
+        <li>Michael Dion</li>
+      </ol>
   </div>
   <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
+
