Outlined App.js file and added basic variables and functions.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li>Too High!</li>
       </ul>
     <h3>Scores</h3>
-      <ol id="Scores">
+      <ol id="scores">
         <li>Michael Dion</li>
       </ol>
   </div>
