added event handlers for buttons and organized and outlined more code.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <p>
         <label for="upper">Select Range</label><input class="form-control focusedInput" id="upper" type ="text"><button type="button" class="btn btn-primary">Upper</button>
       </p>
+      <h2>Your guessing range is from 0 to "Upper Number"</h2>
     <button type="button" class="btn btn-lg btn-success btn-block">Start</button>  
     <h3>GamePlay</h3>
       <ul id = "gameplay">
