updated game play to display You win! and number of guesses it took.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class ="container">
     <h1>Welcome to the Number Guessing Game</h1>
+    <p>Directions: Enter your name.  Then set your range and click start.  Gameplay hints will show up on the page below the section Gameplay.  Enter a number until you guess the random number.  Your score should show up with your name undneath the scores section.</p>
      <p>
         <label for="new-player">Add Player Name</label><input class="form-control focusedInput" id="new-player" type ="text"><button type="button" class="btn btn-primary" id="player-btn">Add</button>
         <label id="playerlabel"></label>
@@ -26,7 +27,7 @@
     <button type="button" class="btn btn-lg btn-success btn-block">Start</button>  
     <h3>GamePlay</h3>
       <ul id = "gameplay">
-        <li>Too High!</li>
+        <li></li>
       </ul>
     <h3>Scores</h3>
       <ol id="scores">
