Scores are now saved into a leaderboard

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </ul>
     <h3>Scores</h3>
       <ol id="scores">
-        <li></li>
+        <li id='entry'></li>
       </ol>
   </div>
   <script type="text/javascript" src="app.js"></script>
