--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
       <ol id="scores">
         <li id='entry'></li>
       </ol>
+    <h3>Leaderboard</h3>
+    <ol>
+      <li></li>
+    </ol>
   </div>
   <script type="text/javascript" src="app.js"></script>
 </body>
